base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bgd-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bgd
