base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bgd.sandbox
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bgd-serice
                port:
                  number: 80
